<resources>
    <string name="app_name">VirtualPantry</string>
    <string name="title_activity_food_dbtest">FoodDBtest</string>
    <string name="input_menu_add_manually">Add Manual Item</string>
    <string name="input_menu_scan_receipt">Scan Receipt</string>
    <string name="input_menu_scan_barcode">Scan Barcode</string>
    <string name="input_menu_import_items">Import Items</string>
    <string name="placeholder_menu_add_item">Add Item</string>
    <string name="placeholder_menu_view_pantry">View Pantry</string>
    <string name="placeholder_menu_view_settings">Settings</string>

    <string name="feedback_screen_cancel">Cancel</string>
    <string name="feedback_screen_submit">Submit</string>
    <string name="feedback_screen_enter_feedback_here">Enter feedback here:</string>
    <string name="settings_add_expired_food_to_shopping_list_checkbox">Add Expired Food to Shopping List</string>
    <string name="settings_feedback">Feedback</string>

    <string name="pantry">Pantry</string>
    <string name="fridge">Fridge</string>
    <string name="freezer">Freezer</string>

    <string-array name="food_locations">
        <item>Pantry</item>
        <item>Fridge</item>
        <item>Freezer</item>
    </string-array>

    <string-array name="filter_options">
        <item>Day added</item>
        <item>Expiry Date</item>
        <item>Category</item>
        <item>A-Z</item>
        <item>Quantity</item>
    </string-array>

    <string-array name="food_categories">
        <item>Fruit</item>
        <item>Vegetables</item>
        <item>Red Meat</item>
        <item>White Meat</item>
    </string-array>
</resources>
